--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <template id="tpl-home">
     <section class="hero">
       <h1>Stream Free Anime & Movies</h1>
-      <p>Latest Collection Updated Daily</p>
+      <p>Welcome To Our Site</p>
     </section>
     <section id="animeList" class="grid">
       <p>Loading content...</p>
