--- a/index.html
+++ b/index.html
@@ -35,10 +35,18 @@
       <h1>Stream Free Anime & Movies</h1>
       <p>Welcome To Our Site</p>
     </section>
+    
+    <section class="slider-wrapper">
+        <h2>🔥 Trending Now</h2>
+        <div id="trendingSlider" class="trending-slider">
+            <p>Loading trending...</p>
+        </div>
+    </section>
+    
     <section id="animeList" class="grid">
       <p>Loading content...</p>
     </section>
-  </template>
+</template>
 
 <template id="tpl-watch">
     <section class="watch-container">
