--- a/index.html
+++ b/index.html
@@ -85,7 +85,6 @@
         <input id="signEmail" type="email" placeholder="Email" required />
         <input id="signPass" type="password" placeholder="Password" required />
         <label style="display:flex; align-items:center; gap:10px; margin:10px 0;"> 
-          I am an Admin (Upload Permission)
         </label>
         <button type="submit">Create Account</button>
       </form>
@@ -111,6 +110,23 @@
       </form>
     </section>
 </template>
+  <!-- 🔥 PAGINATION CONTROLS (Footer se pehle) 🔥 -->
+<div id="paginationControls" class="pagination-controls flex justify-center items-center my-8 p-4 bg-gray-900 border border-gray-700 rounded-xl shadow-2xl">
+    <button id="prevBtn" onclick="goToPreviousPage()" disabled 
+            class="px-6 py-2 mx-2 bg-red-600 hover:bg-red-700 text-white font-semibold rounded-lg transition duration-150 disabled:opacity-50 disabled:cursor-not-allowed">
+        Previous
+    </button>
+    <span id="pageInfo" class="text-lg font-mono text-red-400 px-4">Page 1</span>
+    <button id="nextBtn" onclick="goToNextPage()" 
+            class="px-6 py-2 mx-2 bg-red-600 hover:bg-red-700 text-white font-semibold rounded-lg transition duration-150 disabled:opacity-50 disabled:cursor-not-allowed">
+        Next
+    </button>
+</div>
+<!-- 🔥 END PAGINATION CONTROLS 🔥 -->
+
+यह अब लिस्ट के नीचे, और आपके `<footer>` element के ऊपर, एक साफ़ और केंद्रित (clean and centered) तरीके से दिखेगा।
+
+अब आप **`Next`** और **`Previous`** बटन पर क्लिक करके अपने Anime collection के पेजों को लोड कर सकते हैं!
 
   <script src="app.js"></script>
 </body>
