--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <input id="loginPass" type="password" placeholder="Password" required />
         <button type="submit">Login</button>
       </form>
-      <p>New here? <a href="#" onclick="navigate('signup')">Create Admin Account</a></p>
+      <p>New here? <a href="#" onclick="navigate('signup')">Create An Account</a></p>
     </section>
 </template>
 
