--- a/login.html
+++ b/login.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Admin Login - ZOOKER</title>
+    <link rel="stylesheet" href="login.css"> 
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+</head>
+<body>
 
+    <div class="login-container">
+        <h1 class="logo">ZOOKER <span class="version">Admin Login</span></h1>
+        <p class="subtitle">Content मैनेज करने के लिए अपनी सीक्रेट जानकारी दर्ज करें।</p>
+
+        <form id="admin-login-form">
+            <div class="form-group">
+                <label for="username">Username:</label>
+                <input type="text" id="username" name="username" required>
+            </div>
+            
+            <div class="form-group">
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" required>
+            </div>
+
+            <button type="submit" class="login-btn"><i class="fas fa-lock"></i> Login</button>
+            
+            <p id="error-message" class="error-text"></p>
+        </form>
+    </div>
+
+    <script src="login.js"></script>
+</body>
+</html>
