--- a/index.html
+++ b/index.html
@@ -45,6 +45,14 @@
         </button>
 
         <h3 class="category-header">CATEGORY: FEATURED</h3>
+        <div class="movie-grid">
+            <div class="movie-card" onclick="alert('Movie details clicked!');">
+                <div class="poster-placeholder">
+                    <span class="web-dl-badge">WEB-DL</span>
+                    </div>
+                
+            </div>
+        </div>
 
     <div id="movie-modal" class="modal">
     <div class="modal-content">
