--- a/admin.html
+++ b/admin.html
@@ -47,6 +47,12 @@
                     <label for="web-dl-tag">Tag (e.g., WEB-DL, HD):</label>
                     <input type="text" id="web-dl-tag" name="web-dl-tag" value="WEB-DL">
                 </div>
+                <h3 class="form-section-heading">🎬 Screenshots (Multiple)</h3>
+
+<div class="form-group">
+    <label for="screenshot-files">Screenshots / Trailer Images:</label>
+    <input type="file" id="screenshot-files" name="screenshot-files" accept="image/*" multiple>
+</div>
 
                 <div class="form-group">
                     <label for="poster-url">Poster Image URL:</label>
