--- a/admin.html
+++ b/admin.html
@@ -21,6 +21,7 @@
             <a href="#add-movie" class="nav-link active">Add New Content</a>
             <a href="#manage-content" class="nav-link">Manage Existing Content</a>
             <a href="index.html" class="nav-link exit-btn"><i class="fas fa-sign-out-alt"></i> Exit to Site</a>
+            <button id="logout-btn" class="nav-button">Logout</button>
         </nav>
     </header>
 
